--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,4 +1,5 @@
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import "~bootstrap/scss/bootstrap.scss";
 
 * {
   margin: 0;
@@ -9,6 +10,7 @@
 html {
   background-color: #141414;
   font-family: sans-serif;
+  color: white;
 }
 
 img {
@@ -19,5 +21,5 @@ i,
 input {
   font-size: 1.2rem;
   min-width: 3rem;
-  padding: 0.3rem;
+  margin: 0 0.5rem;
 }
