--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -11,9 +11,9 @@ img {
   max-width: 100%;
 }
 
-i,
+button,
 input {
   font-size: 1.2rem;
-  min-width: 3rem;
+  min-width: 5rem;
   margin: 0 0.5rem;
 }
