--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -9,6 +9,7 @@ html {
 
 img {
   max-width: 100%;
+  object-fit: cover;
 }
 
 button,
@@ -16,4 +17,8 @@ input {
   font-size: 1.2rem;
   min-width: 5rem;
   margin: 0 0.5rem;
+}
+
+input {
+  min-width: 15rem;
 }
